[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool.poetry]
authors = ["Matt Love <matt@hyperglass.dev>"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Information Technology",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]
description = "hyperglass is the modern network looking glass that tries to make the internet better."
documentation = "https://hyperglass.dev"
homepage = "https://hyperglass.dev"
keywords = ["looking glass", "network automation", "isp", "bgp", "routing"]
license = "BSD-3-Clause-Clear"
name = "hyperglass"
readme = "README.md"
repository = "https://github.com/thatmattlove/hyperglass"
version = "1.0.4"

[tool.poetry.scripts]
hyperglass = "hyperglass.console:CLI"

[tool.poetry.dependencies]
Pillow = "^8.4"
PyJWT = "^2.0.1"
PyYAML = "^6.0"
aiofiles = "^22.1.0"
aredis = "^1.1.8"
click = "^8.1.3"
cryptography = "38.0.3"
distro = "^1.5.0"
fastapi = "^0.87.0"
favicons = "^0.1.1"
gunicorn = "^20.1.0"
httpx = "^0.23.1"
inquirer = "^3.0.0"
importlib-metadata = "4.13.0"
loguru = "^0.6.0"
netmiko = "^4.1.2"
paramiko = "^2.7.2"
psutil = "^5.7.2"
py-cpuinfo = "^9.0.0"
pydantic = "^1.10.2"
python = ">=3.8,<4.0"
redis = "^4.3.5"
scrapli = {extras = ["asyncssh"], version = "^2022.7.30"}
uvicorn = {extras = ["standard"], version = "^0.20.0"}
uvloop = "^0.17.0"
xmltodict = "^0.13.0"

[tool.poetry.dev-dependencies]
bandit = "^1.6.2"
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.5"
flake8-breakpoint = "^1.1.0"
flake8-bugbear = "^22.10.27"
flake8-builtins = "^2.0.1"
flake8-comprehensions = "^3.1.4"
flake8-deprecated = "^2.0.1"
flake8-docstrings = "^1.5.0"
flake8-eradicate = "^1.4.0"
flake8-if-expr = "^1.0.0"
flake8-isort = "^5.0.3"
flake8-pie = "^0.16.0"
flake8-plugin-utils = "^1.3.1"
flake8-polyfill = "^1.0.2"
flake8-print = "^5.0.0"
isort = "^5.5.3"
mccabe = "^0.7.0"
pep8-naming = "^0.13.2"
pre-commit = "^2.20.0"
stackprinter = "^0.2.3"

[tool.black]
line-length = 88
